--- a/Razor Databases/WebApp/DemoWebGrid.cshtml
+++ b/Razor Databases/WebApp/DemoWebGrid.cshtml
@@ -1,48 +1,72 @@
-﻿@{ 
+﻿@{
     Layout = "~/_Layout.cshtml";
-    Page.Title = "Demo webgrid: Serch products by category";
-    var page = Request["page"];
+    Page.Title = "Demo WebGrid - Search Products by Category";
 
     var db = WebMatrix.Data.Database.Open("WestWindDb");
     var allCategories = db.Query("SELECT CategoryID, CategoryName FROM Categories");
 
     string categorySelection = Request[nameof(categorySelection)];
+
     List<SelectListItem> catOptions = new List<SelectListItem>();
-    catOptions.Add(new SelectListItem { Value = "", Text = "[Select a category]" });
-    foreach(var item in allCategories)
+    catOptions.Add(new SelectListItem { Value = "", Text = "[Select a Category]" });
+    foreach (var item in allCategories)
     {
-        catOptions.Add(new SelectListItem { Text = item.CategoryName, Value = item.CategoryID.ToString(), Selected = item.CategoryID.ToString() == categorySelection });
+        catOptions.Add(new SelectListItem
+        {
+            Text = item.CategoryName,
+            Value = item.CategoryID.ToString(),
+            Selected = item.CategoryID.ToString() == categorySelection
+        });
     }
 }
+
 <div>
-    <h2>Search Products by category</h2>
-    page number = @page
+    <h2>Search Products by Category</h2>
     <form id="myForm" method="post">
         Category:
-        @Html.DropDownList(nameof(categorySelection), categorySelection,catOptions)
+        @Html.DropDownList(nameof(categorySelection), categorySelection, catOptions)
         <button type="submit">Look up Products</button>
-
-
-        @if (IsPost)
-        {
-            <hr />
-            int catId;
-            if (!int.TryParse(categorySelection, out catId))
-            {
-                <div>Please select an actual category before clicking the look up button</div>
-            }
-            else
-            {
-                var products = db.Query("SELECT ProductID, ProductName, QuantityPerUnit, UnitPrice FROM Products WHERE CategoryID = @0", catId);
-                //Create mygrid w/ result data
-                var myGrid = new WebGrid(products);
-                //mygrid.pageindex = ;
-                <div>
-                    <h3>Products</h3>
-                    @*Pass in data to .getHtml via named parameter*@
-                    @myGrid.GetHtml(columns: myGrid.Columns(myGrid.Column(columnName: "ProductName", header: "Product Name"), myGrid.Column(columnName: "QuantityPerUnit", header: "Qty per Unit"), myGrid.Column(columnName: "UnitPrice", header: "Unit Price", format: @<text>@item.UnitPrice.ToString("C")</text>), myGrid.Column(columnName: "ProductID", header: "Action", format: @<text><form method="post" action="~/ManageProducts.cshtml"><button type="submit">Edit</button><input type="hidden" name="" value="@item.ProductID" /></form></text>))) 
-                </div>
-            }
-        }
     </form>
+
+    @if (IsPost)
+    {
+        <hr />
+        int catId;
+        if (!int.TryParse(categorySelection, out catId))
+        {
+            <div>Please select an actual category before clicking the lookup button.</div>
+        }
+        else
+        {
+            var products = db.Query("SELECT ProductID, ProductName, QuantityPerUnit, UnitPrice FROM Products WHERE CategoryID = @0", catId);
+            // Create a WebGrid with the resulting data
+            var myGrid = new WebGrid(products);
+            <div>
+                <h3>Products</h3>
+                @* Pass in data to my .GetHTML via named paramters *@
+                @myGrid.GetHtml(columns: myGrid.Columns(
+                    myGrid.Column(columnName: "ProductName", header: "Product Name"),
+                    myGrid.Column(columnName: "QuantityPerUnit", header: "Qty/Unit"),
+                    myGrid.Column(columnName: "UnitPrice", header: "Unit Price",
+                                  format: @<text>@item.UnitPrice.ToString("C")</text>),
+                      myGrid.Column(columnName: "ProductID", header: "Action",
+                                    format: @<text>
+                                        <form method="post" action="~/ManageProducts.cshtml">
+                                            <button type="submit">Edit</button>
+                                            <input type="hidden" name="selectedProductId" value="@item.ProductID" />
+                                        </form>
+                                    </text>)))
+            </div>
+        }
+    }
+    <script type="text/javascript">
+        var links = document.querySelectorAll('th a, tfoot a');
+        for (var i = 0; i < links.length; i++) {
+            links[i].addEventListener('click', function () {
+                document.getElementById('myForm').submit();
+                return false;
+            });
+        }
+
+    </script>
 </div>
